[IMPROV] Fix indentation errors E122 and E127
This also adds docstrings to all methods of the replace script also adding it
to the mandatory list of the tox file.

Change-Id: I7348bf135cdb9ea4ef24677f8de359ba717200a9

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps = flake8>=2.2.5
 
 [testenv:flake8-docstrings-mandatory]
 commands = flake8 \
+    docs/conf.py \
     ez_setup.py \
     generate_user_files.py \
     pwb.py \
@@ -42,13 +43,12 @@ commands = flake8 \
     pywikibot/compat/ \
     pywikibot/config2.py \
     pywikibot/daemonize.py \
-    pywikibot/data/__init__.py \
-    pywikibot/data/api.py \
-    pywikibot/data/wikistats.py \
+    pywikibot/data/ \
     pywikibot/diff.py \
     pywikibot/echo.py \
     pywikibot/editor.py \
     pywikibot/exceptions.py \
+    pywikibot/flow.py \
     pywikibot/interwiki_graph.py \
     pywikibot/families/ \
     pywikibot/fixes.py \
@@ -109,6 +109,7 @@ commands = flake8 \
     scripts/patrol.py \
     scripts/piper.py \
     scripts/protect.py \
+    scripts/replace.py \
     scripts/selflink.py \
     scripts/shell.py \
     scripts/spamremove.py \
