--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,9 @@ before_script:
   - pip install -r dev-requirements.txt
 
 script:
+  # Install security packages for requests to support HTTPS in site_detect
   - if [[ "$PYSETUP_TEST_EXTRAS" != '1' ]]; then
-      pip install requests mwoauth ;
+      pip install mwoauth -r requests-requirements.txt ;
     fi
 
   - mkdir ~/.pywikibot
