Fix flake8 errors
Remove DataSite methods that return NotImplemented,
as it is unmaintainable, and prevents DataSite from
being used instead of APISite.

Add site module to mandatory flake8 rule

Change-Id: I8cf395f161a81c77a2eb723624b4170e2e3c53e1

--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ commands = flake8 \
     pywikibot/plural.py \
     pywikibot/proofreadpage.py \
     pywikibot/site_detect.py \
+    pywikibot/site.py \
     pywikibot/textlib.py \
     pywikibot/throttle.py \
     pywikibot/titletranslate.py \
