Use flake8-coding
Change-Id: I3bd2616227eec5555c2676d1ec9331e52dcb2653

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
 basepython = python2.7
 deps = flake8
        flake8-docstrings
+       flake8-coding
 
 [testenv:flake8-py3]
 commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
@@ -224,6 +225,7 @@ commands = {posargs}
 ignore = E241,E265,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
+accept-encodings = utf-8
 
 [pep8]
 ignore = E241,E402,E731
