Move logging to new pywikibot.logging module
config2 and tools now use logging layer.

pywikibot.__url__ introduced as base url to
online documentation.

Generic logging tools moved into tools._logging

Change-Id: I8f1e2c1d09b5d39c5facadb0690ee71bdbf5de1b

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,7 @@ commands = flake8 \
     pywikibot/fixes.py \
     pywikibot/i18n.py \
     pywikibot/logentries.py \
+    pywikibot/logging.py \
     pywikibot/login.py \
     pywikibot/page.py \
     pywikibot/pagegenerators.py \
