Use flake8-print
Replace print with pywikibot methods where appropriate.

Add tests.unittest_print for minor usage of print function
in test modules.

Ignore print function in generate_family_file.py, pwb.py
and two scripts where better rewrites are planned.

Change-Id: Ie8cf4b78aaad3b1bf5233636b7ea87e320f863ed

--- a/tox.ini
+++ b/tox.ini
@@ -30,11 +30,12 @@ basepython = python2.7
 deps = flake8
        hacking
        flake8-docstrings<0.2.2
-       flake8-putty
+       flake8-putty>=0.2.0
        flake8-coding
        flake8-future-import
        flake8-string-format
        flake8-import-order
+       flake8-print>=2.0.1
 
 [testenv:flake8-py3]
 commands =
@@ -43,7 +44,7 @@ commands =
 basepython = python3
 deps = flake8
        flake8-docstrings<0.2.2
-       flake8-putty
+       flake8-putty>=0.2.0
 
 [testenv:nose]
 commands =
@@ -84,10 +85,15 @@ max_line_length = 130
 accept-encodings = utf-8
 require-code = true
 putty-ignore =
-    generate_family_file.py : +D102
+    generate_family_file.py : +D102,T001
+    pwb.py : +T001
     pywikibot/cosmetic_changes.py : +D102, D103
     tests/deprecation_tests.py,tests/pagegenerators_tests.py,tests/site_tests.py,tests/textlib_tests.py,tests/wikibase_tests.py : +D102
     tests/ui_tests.py : +D102, D103
+    tests/__init__.py,tests/aspects.py,tests/script_tests.py,tests/site_detect_tests.py : +T001
+    tests/pwb/ : +T001
+    scripts/casechecker.py,scripts/imagetransfer.py : +T001
+    scripts/maintenance/make_i18n_dict.py : +T001
     scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/featured.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py : +D102, D103
     scripts/checkimages.py,scripts/freebasemappingupload.py,scripts/imagetransfer.py,scripts/lonelypages.py,scripts/movepages.py,scripts/nowcommons.py,scripts/redirect.py,scripts/isbn.py,scripts/reflinks.py,scripts/script_wui.py,scripts/templatecount.py,scripts/revertbot.py,scripts/weblinkchecker.py,scripts/welcome.py : +D102
     scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
