[IMPROV] tox: Remove duplication
Instead of having the error codes copied from everywhere just define the error
codes for flake8 once and reuse them for the different tests.

Change-Id: Ia612a8632b69978163df39a13afdcd018996f05a

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = flake8,flake8-py3,flake8-docstrings-mandatory,py26,py27,py34
 
 [params]
 nose_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py)
+flake8_ignore = D102,D103,E122,E127,{[flake8]ignore}
 
 [testenv]
 setenv =
@@ -18,14 +19,14 @@ install_command = pip install --process-dependency-links --pre {opts} {packages}
 deps = unittest2
 
 [testenv:flake8]
-commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
+commands = flake8 --ignore={[params]flake8_ignore} {posargs}
 basepython = python2.7
 deps = flake8
        flake8-docstrings
        flake8-coding
 
 [testenv:flake8-py3]
-commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
+commands = flake8 --ignore={[params]flake8_ignore} {posargs}
 basepython = python3
 deps = flake8
        flake8-docstrings
@@ -222,7 +223,7 @@ deps =
 commands = {posargs}
 
 [flake8]
-ignore = E241,E265,E402,E731
+ignore = E241,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
