Use flake8-future-import
Add a requirement all code modules use unicode_literals

Change-Id: I3ef8a3610f648be5a51f3ffc3b36fe33ca001932

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ basepython = python2.7
 deps = flake8
        flake8-docstrings
        flake8-coding
+       flake8-future-import
 
 [testenv:flake8-py3]
 commands = flake8 --ignore={[params]flake8_ignore} {posargs}
@@ -223,10 +224,11 @@ deps =
 commands = {posargs}
 
 [flake8]
-ignore = E241,E402,E731
+ignore = E241,E402,E731,FI10,FI11,FI12,FI13,FI15,FI5
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
+require-code = true
 
 [pep8]
 ignore = E241,E402,E731
