Enable flake8 hacking H501 rule
Prevents use of locals(), globals() and `__dict__`.
Where appropriate, #noqa is used to bypass this rule.

Change-Id: Icd939da458b5f0ede58d32dc3ccb23c78ee40992

--- a/tox.ini
+++ b/tox.ini
@@ -243,7 +243,7 @@ deps =
     -rdocs/requirements-py3.txt
 
 [flake8]
-ignore = E241,E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H237,H301,H306,H404,H405,H501,P102,P103
+ignore = E241,E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H237,H301,H306,H404,H405,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
