--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ deps = flake8
        flake8-coding
        flake8-future-import
        flake8-string-format
+       flake8-import-order
 
 [testenv:flake8-py3]
 commands =
@@ -243,7 +244,7 @@ deps =
     -rdocs/requirements-py3.txt
 
 [flake8]
-ignore = E241,E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H306,H404,H405,P102,P103
+ignore = E241,E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H404,H405,I100,I101,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
