--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ deps = flake8
        flake8-docstrings
        flake8-coding
        flake8-future-import
+       flake8-string-format
 
 [testenv:flake8-py3]
 commands = flake8 --ignore={[params]flake8_ignore} {posargs}
@@ -225,7 +226,7 @@ deps =
 commands = {posargs}
 
 [flake8]
-ignore = E241,E402,E731,FI10,FI11,FI12,FI13,FI15,FI5
+ignore = E241,E402,E731,FI10,FI11,FI12,FI13,FI15,FI5,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
