Upgrade docs dependency to sphinx-epytext-0.0.4
sphinx-epytext-0.0.4 fixes a bug allowing '@raise ..:' instead of
'@raises..:'

Also move the doc tox.ini rule above the tool preferences, and
use requests-requirements.txt

Change-Id: Ic084372d573a49deea6ee2dd00b235e08e6eef8d

--- a/tox.ini
+++ b/tox.ini
@@ -226,6 +226,14 @@ deps =
 [testenv:venv]
 commands = {posargs}
 
+[testenv:doc]
+changedir = docs
+commands = make html
+basepython = python3.4
+deps =
+    -rrequests-requirements.txt
+    -rdocs/requirements-py3.txt
+
 [flake8]
 ignore = E241,E402,E731,FI10,FI11,FI12,FI13,FI15,FI5,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
@@ -237,9 +245,3 @@ require-code = true
 ignore = E241,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
-
-[testenv:doc]
-changedir = docs
-commands = make html
-basepython = python3.4
-deps = -rdocs/requirements-py3.txt
