--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,8 @@ mwoauth>=0.2.4
 git+https://github.com/nlhepler/pydot#egg=pydot-1.0.29
 
 # wikistats.py and scripts
-unicodecsv ; python_version < '3'
+unicodecsv<=0.13 ; python_version < '2.7'
+unicodecsv ; python_version < '3' and python_version >= '2.7'
 
 # cosmetic_changes and scripts/isbn
 python-stdnum
