Add coverage in travis builds
It's based on the help in codecov.io [1]

[1]: https://github.com/codecov/example-python

Bug: T74863
Change-Id: I23a13a4664943044baa47ac501d498d28d0e977f

--- a/.travis.yml
+++ b/.travis.yml
@@ -90,13 +90,16 @@ script:
       nosetests --version ;
       if [[ "$SITE_ONLY" == "1" ]]; then
         echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
-        python setup.py nosetests --tests tests --verbosity=2 -a "family=$FAMILY,code=$LANGUAGE" ;
+        python setup.py nosetests --tests tests --verbosity=2 -a "family=$FAMILY,code=$LANGUAGE" --with-coverage --cover-package=. ;
       else
-        python setup.py nosetests --tests tests --verbosity=2 ;
+        python setup.py nosetests --tests tests --verbosity=2 --with-coverage --cover-package=. ;
       fi ;
     else
-      python setup.py test ;
+      coverage run setup.py test ;
     fi
+
+after_success:
+    codecov
 
 env:
   global:
