Remove dependency on doctest-ignore-unicode
doctest-ignore-unicode is used to ignore u'..' prefixes
in the doctest output.

When it isnt installed, doctest complains with an uninformative
error:

ValueError: line 34 of the doctest for api.Request has an invalid
option: u'+IGNORE_UNICODE'

Instead of using doctest-ignore-unicode, downgrade the values to
a `str` to remove the u'..' prefix on Python 2.

Change-Id: I4471a3eb658a98970b49dd5e3d71e1d5e195d0e6

--- a/tox.ini
+++ b/tox.ini
@@ -208,10 +208,9 @@ deps = flake8>=2.2.5
 commands =
     python -W error::UserWarning -m generate_user_files -family:test -lang:test -v
     nosetests --version
-    nosetests --with-doctest --with-doctest-ignore-unicode -v -a "!net" tests pywikibot {[params]nose_skip}
+    nosetests --with-doctest -v -a "!net" tests pywikibot {[params]nose_skip}
 deps =
     nose
-    doctest-ignore-unicode
     unicodecsv
 
 [testenv:nose34]
@@ -219,10 +218,9 @@ basepython = python3
 commands =
     python -W error::UserWarning -m generate_user_files -family:test -lang:test -v
     nosetests --version
-    nosetests --with-doctest --with-doctest-ignore-unicode -v -a "!net" tests pywikibot {[params]nose_skip}
+    nosetests --with-doctest -v -a "!net" tests pywikibot {[params]nose_skip}
 deps =
     nose
-    doctest-ignore-unicode
     six
 
 [testenv:venv]
