--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,9 @@ install_command = pip install --process-dependency-links --pre {opts} {packages}
 deps = unittest2
 
 [testenv:flake8]
-commands = flake8 --ignore={[params]flake8_ignore} {posargs}
+commands =
+    flake8 --version
+    flake8 --ignore={[params]flake8_ignore} {posargs}
 basepython = python2.7
 deps = flake8
        hacking
@@ -29,7 +31,9 @@ deps = flake8
        flake8-string-format
 
 [testenv:flake8-py3]
-commands = flake8 --ignore={[params]flake8_ignore} {posargs}
+commands =
+    flake8 --version
+    flake8 --ignore={[params]flake8_ignore} {posargs}
 basepython = python3
 deps = flake8
        flake8-docstrings
