--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -95,7 +95,10 @@ test_script:
   - ps: "[IO.File]::AppendAllText($env:PYWIKIBOT2_USER_CONFIG, 'max_retries = 2; maximum_GET_length = 5000; transliteration_target = None;')"
 
   - set PYSETUP_TEST_NO_UI=1
-  - "%CMD_IN_ENV% python setup.py test"
+  - "%CMD_IN_ENV% coverage run setup.py test"
+
+after_test:
+  - codecov
 
 artifacts:
-  - path: dist\*
+  - path: dist\*  .coverage coverage.xml
