Add tox default envs for WM Jenkins
For those that can be run in isolated Debian Jessie VMs and don't need special
jobs.

Bug: T87169
Change-Id: I7af6c732769650319f0bd08eeffd57f59885a28f

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,11 @@ minversion = 1.6
 skipsdist = True
 envlist = flake8,flake8-py3,flake8-docstrings-mandatory,py26,py27,py34
 
+[tox:jenkins]
+# Override default for WM Jenkins
+# Others are run in their own individual jobs on WM Jenkins
+envlist = flake8,flake8-py3,flake8-docstrings-mandatory
+
 [params]
 nose_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py)
 flake8_ignore = D102,D103,{[flake8]ignore}
