Fix pep257 errors in family.py
Deprecate some Family methods.

Change-Id: Ia2cb073d72f5579efb707f9a2f7e60c279f47491

--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,7 @@ commands = flake8 \
     pywikibot/echo.py \
     pywikibot/editor.py \
     pywikibot/exceptions.py \
+    pywikibot/family.py \
     pywikibot/flow.py \
     pywikibot/interwiki_graph.py \
     pywikibot/families/ \
