Add docstrings to CGI and GUI modules
Also fix syntax error in CGI interface input().

Change-Id: I6d2f5a2c81d0c46529f821e0dc0bb6436563e72e

--- a/tox.ini
+++ b/tox.ini
@@ -85,13 +85,7 @@ commands = flake8 \
     pywikibot/throttle.py \
     pywikibot/titletranslate.py \
     pywikibot/tools/ \
-    pywikibot/userinterfaces/__init__.py \
-    pywikibot/userinterfaces/terminal_interface.py \
-    pywikibot/userinterfaces/terminal_interface_base.py \
-    pywikibot/userinterfaces/terminal_interface_unix.py \
-    pywikibot/userinterfaces/terminal_interface_win32.py \
-    pywikibot/userinterfaces/transliteration.py \
-    pywikibot/userinterfaces/win32_unicode.py \
+    pywikibot/userinterfaces/ \
     pywikibot/version.py \
     pywikibot/weblib.py \
     pywikibot/xmlreader.py \
