Add missing docstring to date module
Also deprecate/privatise encNoConv and MakeParameter,
which were each only used once in this module.

Change-Id: I21a2a360153c1a0d2bcbebc10f87e95f7380e88b

--- a/tox.ini
+++ b/tox.ini
@@ -64,6 +64,7 @@ commands = flake8 \
     pywikibot/config2.py \
     pywikibot/daemonize.py \
     pywikibot/data/ \
+    pywikibot/date.py \
     pywikibot/diff.py \
     pywikibot/echo.py \
     pywikibot/editor.py \
