Add missing docstrings to botirc module.
Change-Id: I6dd398a070e03ae0112e511967cee0cb83d735ce

--- a/tox.ini
+++ b/tox.ini
@@ -58,6 +58,7 @@ commands = flake8 \
     pywikibot/backports.py \
     pywikibot/bot.py \
     pywikibot/bot_choice.py \
+    pywikibot/botirc.py \
     pywikibot/comms/ \
     pywikibot/compat/ \
     pywikibot/config2.py \
