Add explanations for ignored flake8 codes
Change-Id: I6406b03d0e4c5af9a15fd05eb958070877755bed

--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,25 @@ deps =
     -rdocs/requirements-py3.txt
 
 [flake8]
+# The following are intentionally ignored, possibly pending consensus
+# D105: Missing docstring in magic method
+# D211: No blank lines allowed before class docstring
+# FI10,FI12,FI13,FI15: __future__ import "division", "with_statement", "print_function" and "generator_stop" missing
+# FI5: __future__ import "x" present
+# H101: TODO format
+# H236: Mandatory use of six for Python 2 & 3 metaclass support
+# H404: docstring multiline start
+# H405: docstring summary line
+# H301,I100,I101: import order rules; Pywikibot uses rules H306 and I201
+
+# The following are to be fixed
+# D102: Missing docstring in public method
+# D103: Missing docstring in public function
+# E402: module level import not at top of file; see T87409
+# E731: do not assign a lambda expression, use a def; see I7b3db838
+# H201: Except: format
+# H202: assertRaises Exception too broad
+# P102,P103: string does contain unindexed parameters; see I36355923
 ignore = E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H404,H405,I100,I101,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
@@ -97,9 +116,11 @@ putty-ignore =
     scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
 
 [pep8]
+# see explanations above
 ignore = E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
 [pep257]
+# see explanations above
 ignore = D105,D211
