--- a/tox.ini
+++ b/tox.ini
@@ -93,10 +93,9 @@ deps =
 # D102: Missing docstring in public method
 # D103: Missing docstring in public function
 # E402: module level import not at top of file; see T87409
-# E731: do not assign a lambda expression, use a def; see I7b3db838
 # H201: Except: format
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101,P102,P103
+ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
@@ -116,7 +115,7 @@ putty-ignore =
 
 [pep8]
 # see explanations above
-ignore = E402,E731
+ignore = E402
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
