--- a/tox.ini
+++ b/tox.ini
@@ -95,7 +95,7 @@ deps =
 # E402: module level import not at top of file; see T87409
 # H201: Except: format
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101,P102,P103
+ignore = E402,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
@@ -112,6 +112,9 @@ putty-ignore =
     scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/featured.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py : +D102, D103
     scripts/checkimages.py,scripts/freebasemappingupload.py,scripts/imagetransfer.py,scripts/lonelypages.py,scripts/movepages.py,scripts/nowcommons.py,scripts/redirect.py,scripts/isbn.py,scripts/reflinks.py,scripts/script_wui.py,scripts/templatecount.py,scripts/revertbot.py,scripts/weblinkchecker.py,scripts/welcome.py : +D102
     scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
+    scripts/interwiki.py,/""/ : +P102
+    pywikibot/__init__.py,/link_regex/ : +P103
+    tests/textlib_tests.py,/self.assert.*{{/ : +P103
 
 [pep8]
 # see explanations above
