flake8-docstrings 0.2.2-0.2.4 fail
flake8-docstrings 0.2.1 has been stable for a long time.
flake8-docstrings 0.2.2 released November 24 was a regression,
and 0.2.3 and 0.2.4 have not fixed the problems.

Bug: T119790
Change-Id: I9c970fee8ad4c94da7f1ba162bca650f9e083c6f

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 basepython = python2.7
 deps = flake8
        hacking
-       flake8-docstrings
+       flake8-docstrings<0.2.2
        flake8-coding
        flake8-future-import
        flake8-string-format
@@ -42,12 +42,12 @@ commands =
     flake8 --ignore={[params]flake8_ignore} {posargs}
 basepython = python3
 deps = flake8
-       flake8-docstrings
+       flake8-docstrings<0.2.2
 
 [testenv:flake8-docstrings]
 commands = flake8 {posargs}
 deps = flake8>=2.2.5
-       flake8-docstrings
+       flake8-docstrings<0.2.2
 
 [testenv:flake8-docstrings-mandatory]
 commands = flake8 \
@@ -209,7 +209,7 @@ commands = flake8 \
     tests/xmlreader_tests.py
 
 deps = flake8>=2.2.5
-       flake8-docstrings
+       flake8-docstrings<0.2.2
 
 [testenv:nose]
 commands =
