Enable flake8 rule E241
Fix for minor cases, and ignore for specific cases which would
require large changes.

Change-Id: I54742db3c7c336a514729889f85f1d10e94341e4

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ deps =
     -rdocs/requirements-py3.txt
 
 [flake8]
-ignore = E241,E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H404,H405,I100,I101,P102,P103
+ignore = E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H404,H405,I100,I101,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
@@ -86,6 +86,10 @@ require-code = true
 putty-ignore =
     generate_family_file.py : +D102
     pywikibot/cosmetic_changes.py : +D102, D103
+    pywikibot/date.py,pywikibot/family.py,pywikibot/fixes.py,pywikibot/textlib.py,pywikibot/userinterfaces/terminal_interface_unix.py,pywikibot/userinterfaces/terminal_interface_win32.py,pywikibot/families/wikipedia_family.py : +E241
+    tests/page_tests.py : +E241
+    scripts/,/pagegenerators.parameterHelp/ : +E241
+    scripts/blockreview.py,scripts/imagetransfer.py,scripts/interwiki.py,scripts/maintenance/wikimedia_sites.py : +E241
     tests/deprecation_tests.py,tests/pagegenerators_tests.py,tests/site_tests.py,tests/textlib_tests.py,tests/wikibase_tests.py : +D102
     tests/ui_tests.py : +D102, D103
     scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/featured.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py : +D102, D103
@@ -93,7 +97,7 @@ putty-ignore =
     scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
 
 [pep8]
-ignore = E241,E402,E731
+ignore = E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
