Enable doctest syntax checking
doctest syntax checking should be enabled on all files.

Also disable running doctest in default jenkins nose testenv,
so that more doctest using network resources may be added
to improve the usefulness of the documentation.

Change-Id: I6ab8e37dca2d35bae8937fd2555bf6e2548315ca

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = flake8,flake8-py3,py26,py27,py34
+envlist = flake8,flake8-py3,doctest-{py27,py34},py26,py27,py34
 
 [tox:jenkins]
 # Override default for WM Jenkins
@@ -9,7 +9,7 @@ envlist = flake8,flake8-py3,py26,py27,py34
 envlist = flake8,flake8-py3
 
 [params]
-nose_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py|api\.py)
+doctest_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py)
 
 [testenv]
 setenv =
@@ -25,9 +25,10 @@ deps = unittest2
 [testenv:flake8]
 commands =
     flake8 --version
-    flake8 --ignore={[flake8]ignore} {posargs}
+    flake8 --doctests {posargs}
 basepython = python2.7
 deps = flake8
+       git+https://github.com/pyflakes/pyflakes.git
        hacking
        flake8-docstrings<0.2.2
        flake8-putty
@@ -39,9 +40,10 @@ deps = flake8
 [testenv:flake8-py3]
 commands =
     flake8 --version
-    flake8 --ignore={[flake8]ignore} {posargs}
+    flake8 --doctests {posargs}
 basepython = python3
 deps = flake8
+       git+https://github.com/pyflakes/pyflakes.git
        flake8-docstrings<0.2.2
        flake8-putty
 
@@ -49,7 +51,7 @@ deps = flake8
 commands =
     python -W error::UserWarning -m generate_user_files -family:test -lang:test -v
     nosetests --version
-    nosetests --with-doctest --with-detecthttp -v -a '!net' tests pywikibot {[params]nose_skip}
+    nosetests --with-detecthttp -v -a '!net' tests
 deps =
     nose
     nose-detecthttp
@@ -60,10 +62,22 @@ basepython = python3
 commands =
     python -W error::UserWarning -m generate_user_files -family:test -lang:test -v
     nosetests --version
-    nosetests --with-doctest --with-detecthttp -v -a '!net' tests pywikibot {[params]nose_skip}
+    nosetests --with-detecthttp -v -a '!net' tests
 deps =
     nose
     nose-detecthttp>=0.1.3  # Python 3 support added
+    six
+
+[testenv:doctest]
+commands =
+    python -W error::UserWarning -m generate_user_files -family:test -lang:test -v
+    nosetests --version
+    nosetests --with-doctest pywikibot {[params]doctest_skip}
+basepython =
+    py27: python2.7
+    py34: python3.4
+deps =
+    nose
     six
 
 [testenv:venv]
