Enable hacking rule H202
Hacking rule H202 prevents tests using self.assertRaises
with only 'Exception' being detected.  It requires tests
to switch to using assertRaisesRegexp or use a more
specific Exception subclass.

Change-Id: I667d7ed3aa447412d99b5a503d09394b7c09a02d

--- a/tox.ini
+++ b/tox.ini
@@ -95,9 +95,8 @@ deps =
 # E402: module level import not at top of file; see T87409
 # E731: do not assign a lambda expression, use a def; see I7b3db838
 # H201: Except: format
-# H202: assertRaises Exception too broad
 # P102,P103: string does contain unindexed parameters; see I36355923
-ignore = E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H202,H236,H301,H404,H405,I100,I101,P102,P103
+ignore = E402,E731,D105,D211,FI10,FI12,FI13,FI15,FI5,H101,H201,H236,H301,H404,H405,I100,I101,P102,P103
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 accept-encodings = utf-8
