Tox pyflakes task
Replace flake8 disable=xxx with alternative workarounds for pyflakes.

For Tox/Jenkins, use pyflakes directly on various Python
implementations/versions, adding checking PyPy by Jenkins,
and an unused testenv for developer checking of Python 2.6.

The tox flake8 task now only runs on Python 2.7, as typically
flake8 plugins & errors are not version specific.

Bug: T101592
Change-Id: I076a5300ae6ff1c30365be106a8ceca2d48de7e4

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,15 @@
 [tox]
-minversion = 1.6
+# minversion = 1.7.2 needed for skip_missing_interpreters
+minversion = 1.7.2
 skipsdist = True
-envlist = flake8,flake8-py3,doctest-{py27,py34},py26,py27,py34
+skip_missing_interpreters = True
+envlist = flake8,pyflakes-{py26,py3,pypy},doctest-{py27,py34},py26,py27,py34
 
 [tox:jenkins]
 # Override default for WM Jenkins
 # Others are run in their own individual jobs on WM Jenkins
-envlist = flake8,flake8-py3
+# Wikimedia Jenkins does not have Python 2.6
+envlist = flake8,pyflakes-{py3,pypy}
 
 [params]
 doctest_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py)
@@ -21,6 +24,27 @@ install_command = pip install --process-dependency-links --pre {opts} {packages}
 
 [testenv:py26]
 deps = unittest2
+
+[testenv:pyflakes-py26]
+commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+basepython = python2.6
+deps =
+    pyflakes
+    ffind>=1.0.2
+
+[testenv:pyflakes-py3]
+commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+basepython = python3
+deps =
+    pyflakes
+    ffind>=1.0.2
+
+[testenv:pyflakes-pypy]
+commands = ffind --ignore-vcs . '(?<!user-config).py$' --module=pyflakes
+basepython = pypy
+deps =
+    pyflakes
+    ffind>=1.0.2
 
 [testenv:flake8]
 commands =
@@ -39,16 +63,6 @@ deps = flake8
        flake8-tuple>=0.2.8
        flake8-print>=2.0.1
        flake8-mock
-
-[testenv:flake8-py3]
-commands =
-    flake8 --version
-    flake8 --doctests {posargs}
-basepython = python3
-deps = flake8
-       pyflakes >= 1.1
-       flake8-docstrings>=0.2.6
-       flake8-putty>=0.3.2
 
 [testenv:nose]
 commands =
@@ -135,9 +149,6 @@ putty-ignore =
     scripts/makecat.py : +D103
     scripts/interwiki.py,/""/ : +P102
     pywikibot/__init__.py,/link_regex/ : +P103
-    # undefined names on Python 3:
-    pywikibot/page.py , /chr = unichr/ , python_version >= '3' : +F821
-    pywikibot/userinterfaces/terminal_interface_base.py , /raw_input\(\)/ , python_version >= '3' : +F821
     # invalidly detected as {} format string:
     tests/textlib_tests.py,/self.assert.*{{/ : +P103
     # __dict__ used in a discouraged manner
