--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,11 @@
 minversion = 1.7.2
 skipsdist = True
 skip_missing_interpreters = True
-envlist = diff-checker,commit-message,flake8,pyflakes-{py26,py3,pypy},doctest-{py27,py34},py26,py27,py34
+envlist = diff-checker,commit-message,flake8,pyflakes-{py27,py3,pypy},doctest-{py27,py34},py27,py34
 
 [tox:jenkins]
 # Override default for WM Jenkins
 # Others are run in their own individual jobs on WM Jenkins
-# Wikimedia Jenkins does not have Python 2.6
 envlist = diff-checker,commit-message,flake8,pyflakes-{py3,pypy}
 
 [params]
@@ -29,12 +28,9 @@ commands = python pwb.py diff_checker
 deps = commit-message-validator
 commands = commit-message-validator
 
-[testenv:py26]
-deps = unittest2
-
-[testenv:pyflakes-py26]
+[testenv:pyflakes-py27]
 commands = findx . -name '*.py' -a '!' -path '*/.*' -a '!' -name 'user-config.py' : pyflakes
-basepython = python2.6
+basepython = python2.7
 deps =
     pyflakes
     findx >= 0.9.9
@@ -170,7 +166,7 @@ deps =
 
 ignore = C401,C402,C405,E402,D105,D211,FI10,FI12,FI13,FI15,FI16,FI17,FI5,H101,H236,H301,H404,H405,H903,I100,I101,I202,N802,N803,N806,D401,D413,D103,D412,W503
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*,scripts/userscripts/*
-min-version = 2.6
+min-version = 2.7
 max_line_length = 100
 accept-encodings = utf-8
 require-code = true
