Add noqa support to pep8 E731
pep8 1.6.0+ includes E731 for assigned lambda's, but it does
not support 'noqa' for this code.
flake8-putty allows specific codes to be whitelisted in
specific files and when a regex condition has been met.

Change-Id: If8a22d57f4b2b22695314810825b80c7b581a07b

--- a/tox.ini
+++ b/tox.ini
@@ -102,6 +102,7 @@ max_line_length = 130
 accept-encodings = utf-8
 require-code = true
 putty-ignore =
+    pwb.py,scripts/interwiki.py,scripts/flickrripper.py,pywikibot/site.py, /# noqa: E731/ : +E731
     generate_family_file.py : +D102,T001
     pwb.py : +T001
     pywikibot/cosmetic_changes.py : +D102, D103
