Archive features.py
Also building an archive system

Bug: T109210
Change-Id: I3143241f64e36762f4065f4eeef6f5460c114090

--- a/tox.ini
+++ b/tox.ini
@@ -130,7 +130,7 @@ putty-ignore =
     tests/pwb/ : +T001
     scripts/casechecker.py,scripts/imagetransfer.py : +T001
     scripts/maintenance/make_i18n_dict.py : +T001
-    scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/featured.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py : +D102, D103
+    scripts/archivebot.py,scripts/casechecker.py,scripts/commons_link.py,scripts/cfd.py,scripts/imagecopy.py,scripts/imagecopy_self.py,scripts/interwiki.py,scripts/replicate_wiki.py,scripts/solve_disambiguation.py,scripts/maintenance/compat2core.py,scripts/archive/ : +D102, D103
     scripts/checkimages.py,scripts/freebasemappingupload.py,scripts/imagetransfer.py,scripts/lonelypages.py,scripts/movepages.py,scripts/nowcommons.py,scripts/redirect.py,scripts/isbn.py,scripts/reflinks.py,scripts/script_wui.py,scripts/revertbot.py,scripts/weblinkchecker.py,scripts/welcome.py : +D102
     scripts/catall.py,scripts/imageharvest.py,scripts/makecat.py,scripts/maintenance/cache.py,scripts/maintenance/wikimedia_sites.py : +D103
     scripts/interwiki.py,/""/ : +P102
